--- a/dead.html
+++ b/dead.html
@@ -13,7 +13,8 @@
     <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">MORE</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="index.html">home</a>
+    <a href="index.html">Home</a>
+    <a href="dead2.html">Story 2</a>
     <a href="credits.html">Credits</a>
     <a href="about.html">About DEADMEAT</a>
   </div>
