--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
   <div id="myDropdown" class="dropdown-content">
     <a href="index.html">Home</a>
     <a href="dead.html">Story 1</a>
+    <a href="dead2.html">Story 2</a>
     <a href="credits.html">Credits</a>
   </div>
 </div>
