--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <button onclick="myFunction()" class="dropbtn">MORE</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="dead.html">Story 1</a>
+    <a href="dead2.html">Story 2</a>
     <a href="credits.html">Credits</a>
     <a href="about.html">About DEADMEAT</a>
   </div>
