--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 </div>
 <div class="deadmeat">
     <h1 class="welcome">WELCOME TO DEADMEAT RADIO</h1>
-    <img src="https://cades-archive1.neocities.org/Assets/Skulls/ezgif.com-crop%20(2).gif" alt="spinbone">
+    <a href="mrbone.html"><img src="https://cades-archive1.neocities.org/Assets/Skulls/ezgif.com-crop%20(2).gif" alt="mrbone"></a>
+
     
 </div>
 
