--- a/dead2.html
+++ b/dead2.html
@@ -15,6 +15,7 @@
   <div id="myDropdown" class="dropdown-content">
     <a href="index.html">Home</a>
     <a href="dead.html">Story 1</a>
+    <a href="shop.html">Shop</a>
     <a href="credits.html">Credits</a>
     <a href="about.html">About DEADMEAT</a>
   </div>
