--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
   <div id="myDropdown" class="dropdown-content">
     <a href="dead.html">Story 1</a>
     <a href="dead2.html">Story 2</a>
+    <a href="shop.html">Shop</a>
     <a href="credits.html">Credits</a>
     <a href="about.html">About DEADMEAT</a>
   </div>
 </div>
 <div class="deadmeat">
     <h1 class="welcome">WELCOME TO DEADMEAT RADIO</h1>
-    <a href="mrbone.html"><img src="https://cades-archive1.neocities.org/Assets/Skulls/ezgif.com-crop%20(2).gif" alt="mrbone"></a>
-
-    
+    <img src="https://cades-archive1.neocities.org/Assets/Skulls/ezgif.com-crop%20(2).gif" alt="spinbone">
 </div>
-
 
     
 </body>
