--- a/credits.html
+++ b/credits.html
@@ -15,6 +15,7 @@
     <a href="index.html">Home</a>
     <a href="dead.html">Story 1</a>
     <a href="dead2.html">Story 2</a>
+    <a href="shop.html">Shop</a>
     <a href="about.html">About DEADMEAT</a>
   </div>
 </div>
