--- a/dead.html
+++ b/dead.html
@@ -15,6 +15,7 @@
   <div id="myDropdown" class="dropdown-content">
     <a href="index.html">Home</a>
     <a href="dead2.html">Story 2</a>
+    <a href="shop.html">Shop</a>
     <a href="credits.html">Credits</a>
     <a href="about.html">About DEADMEAT</a>
   </div>
