--- a/shop.html
+++ b/shop.html
@@ -36,6 +36,6 @@
   </div>
 </div>
 
-
+<a href="love.html"><img src="https://gifdb.com/images/high/transparent-heart-sticker-purple-pixel-heart-pdxsm5ol8e6sezso.webp" alt="heart" style="width: 35px; height: 35px;" class="love">
 </body>
 </html>
